2009-02-02  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* templates/release_detail.html: Fix language link (only the end
	of anchor was present) and add the URL. Replace incorrect
	'Release' header by 'Language'.

2009-02-02  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* docs/notes-upgrade.txt: Added notes for PostgreSQL.

2009-01-30  Claude Paroz  <claude@2xlibre.net>

	* vertimus/tests/__init__.py:
	* vertimus/views.py: Revert unwanted changes in previous commit.

2009-01-30  Claude Paroz  <claude@2xlibre.net>

	* docs/notes-upgrade.txt: Add new field and migration script.
	* stats/utils.py: Compute number of figures in po(t) files.
	* stats/models.py: Store number of figures in database. This prevents
	constant filesystem accesses (msgcat|grep) while displaying module stats.
	Now filesystem access is only required when displaying doc images in
	module_images template.

2009-01-30  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Place translator comment for date format just before 
	the appropriate	string.
	Fixes bug #569897.

2009-01-28  Claude Paroz  <claude@2xlibre.net>

	* templates/languages/language_release_stats.html:
	* stats/models.py: Multiple optimizations in get_lang_stats_by_type to
	prevent too much db queries	(caching object lists in dicts). Cut request
	number by 20 for language_release view.

2009-01-27  Claude Paroz  <claude@2xlibre.net>

	* templates/languages/language_all_modules.html:
	* languages/urls.py:
	* languages/views.py: Add a new URL/view/template to show stats for all
	modules. Still need a link, probably from team page.
	WIP for bug #415315.

2009-01-27  Claude Paroz  <claude@2xlibre.net>

	* media/robots.txt: Add file and prevent indexing of /vertimus (no
	interest for search engines).
	* urls.py: Serve robots.txt (in static serve config).

2009-01-27  Claude Paroz  <claude@2xlibre.net>

	* docs/notes-upgrade.txt: Migration notes about decoupling 'team' from
	'auth_group'.